--- a/alertconfig.mdx
+++ b/alertconfig.mdx
@@ -4,7 +4,9 @@ description: Configure Alerts
 published: true
 ---
 
-Connect your [Alert Thresholds](/docs/metricmonitor#add-alert-trigger) to external alerting tools like [PagerDuty](/docs/pagerduty), [Slack](/docs/slack), and [IncidentIo](/docs/incidentio).
+Connect your [Alert Thresholds](/docs/metricmonitor#add-alert-trigger)
+to external alerting tools like [PagerDuty](/docs/pagerduty),
+[Slack](/docs/slack), and [incident.io](/docs/incidentio).
 
 ---
 
